<resources>
    <string name="ga_trackingId">UA-233348-12</string>
    <string name="com.hopstop.ClientView.DirectionsMainViewActivity">Main Screen</string>
    <string name="com.hopstop.ClientView.DirectionsResultActivity">Direction Result Screen</string>
    <string name="com.hopstop.ClientView.OptionModeActivity">Direction Options Screen</string>
    <string name="com.hopstop.ClientView.DepartureActivity">Direction Departure Screen</string>
    <string name="com.hopstop.ClientView.HistoryCallsActivity">History Screen</string>
    <string name="com.hopstop.ClientView.DirectionsTaxiActivity">Direction Taxi Result</string>
    <string name="com.hopstop.ClientView.MoreMyTripsDirectionActivity">My Trip Route Screen</string>
    <string name="com.hopstop.ClientView.MoreServiceAdvisorActivity">Advisories Main Screen</string>
    <string name="com.hopstop.ClientView.MoreSubwayAdvisoriesActivity">Advisories Subway Screen</string>
    <string name="com.hopstop.ClientView.MoreSubwayAdvisoriesDetailActivity">Advisories Subway Details Screen</string>
    <string name="com.hopstop.ClientView.TransitMapListActivity">Transit Map Screen</string>
    <string name="com.hopstop.ClientView.TransitMapActivity">City Transit Map Screen</string>
    <string name="com.hopstop.ClientView.SchedulesCitySelectionActivity">Schedules City Selection Screen</string>
    <string name="com.hopstop.ClientView.SchedulesStationGroupSelectionActivity">Schedules Station Groups Selection Screen</string>
    <string name="com.hopstop.ClientView.SchedulesSearchActivity">Schedules Search Screen</string>
    <string name="com.hopstop.ClientView.SchedulesResultActivity">Schedules Result Screen</string>
    <string name="com.hopstop.ClientView.SchedulesSearchDepartureTimeActivity">Schedules Search Departure Time Screen</string>
    <string name="com.hopstop.ClientView.SchedulesDetailsActivity">Schedules Stops Screen</string>
    <string name="com.hopstop.ClientView.NearbyStationsRequestActivity">Stations Search Screen</string>
    <string name="com.hopstop.ClientView.NearbyStationsResultActivity">Stations Result Screen</string>
    <string name="com.hopstop.ClientView.MoreActivity">More Screen</string>
    <string name="com.hopstop.ClientView.MoreMyTripsActivity">My Trip Main Screen</string>
    <string name="com.hopstop.ClientView.MoreFeedbackActivity">Feedback Screen</string>
    <string name="com.hopstop.ClientView.DirectionsSmartRouteResultActivity">Smart Route Screen</string>
    <string name="com.hopstop.ClientView.MoreSettingsActivity">Settings Screen</string>
    <string name="hello">Hello World, SplashScreen!</string>
    <string name="app_name">HopStop</string>
    <string name="MainView_name">HopStop</string>
    <string name="edit_text_label">address only ( no city/state )</string>
    <string name="edit_start_addr_text_label">Start</string>
    <string name="edit_dest_addr_text_label">End</string>
    <string name="total_travel_time">TOTAL TRAVEL %1$s miles, %2$s</string>
    <string name="scorecard_off_msg">Dimitare Test</string>
    <string name="subway_rail">Subway / Rail</string>
    <string name="bus_only">Bus</string>
    <string name="subway_rail_bus">Subway / Rail or Bus</string>
    <string name="walking_only">Walking</string>
    <string name="taxi">Taxi</string>
    <string name="bike">Bicycle</string>
    <string name="more_walking">More street walking (fewer transfers)</string>
    <string name="more_transfers">Less street walking (more transfers)</string>
    <string name="regional_rail">Regional Rail</string>
    <string name="regional_rail_off">Exclude Regional Rail</string>
    <string name="private_vehicle">Private Vehicles</string>
    <string name="private_vehicle_off">Exclude Private Vehicles</string>
    <string name="option_mode_title">Options</string>
    <string name="time_selection_page_depart_title">Departure Time</string>
    <string name="time_selection_page_arrive_title">Arrival Time</string>
    <string name="main_page_arrive_text">Arrive</string>
    <string name="main_page_depart_text">Depart</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="enter_address">Enter Address</string>
    <string name="go">Go</string>
    <string name="current_location">Current Location</string>
    <string name="directions">Directions</string>
    <string name="maps">Nearby Stations</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="history">History</string>
    <string name="contacts">Contacts</string>
    <string name="history_delete">Delete</string>
    <string name="not_available">Not Available</string>
    <string name="type_home">Home</string>
    <string name="type_work">Work</string>
    <string name="type_other">Other</string>
    <string name="edit_btn">Edit</string>
    <string name="cancel_btn">Cancel</string>
    <string name="show_bus_stations">Show Bus Stations</string>
    <string name="show_subway_stations">Show Subway Stations</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="show_subway_and_bus_stations">Show Subway and Bus Stations</string>
    <string name="feedback_issues_help">Feedback/Issues/Help</string>
    <string name="advertise_on_hopstop">Advertise on HopStop</string>
    <string name="app_version_number">v2.3.1</string>
    <string name="hopstop_app_version_number">HopStop Android App v2.3.1</string>
    <string name="android_market_new_version_available">There is a new version available in the Play Store. Would you like to upgrade to the newest version?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="later">Later</string>
    <string name="options_radio_title1">Transportation Mode</string>
    <string name="options_radio_title2">Walking / Transfer Preference</string>
    <string name="options_radio_title3">Vehicle Preference</string>
    <string name="departure_title_label">Select Day</string>
    <string name="departure_title_time_label">Select Time</string>
    <string name="map_instruction_text">Please enter address above</string>
    <string name="no_gps_result">Unable to acquire location, please check location settings of your phone and try again, or enter address</string>
    <string name="no_starting_address_msg">No starting address found, please try other address or change address format</string>
    <string name="no_end_address_msg">No destination address found, please try other address or change address format</string>
    <string name="no_starting_address_title">No starting address found</string>
    <string name="no_end_address_title">No destination address found</string>
    <string name="no_addresses_msg">Neither addresses were found, please try other addresses or change address formats</string>
    <string name="no_addresses_title">No addresses found</string>
    <string name="no_route_title">No route found</string>
    <string name="no_map_address_msg">No address was found, please try other address or change address format</string>
    <string name="network_error">Network error occurred, please check settings on your phone and try again.</string>
    <string name="no_active_data_connection">Please turn on your data connection within Settings on your phone, and try again.</string>
    <string name="no_map_title">No map found</string>
    <string name="next_time">Next time</string>
    <string name="next_week">Next Week</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_error">An error has occurred, please try again.</string>
    <string name="no_taxi_found">No taxi found.</string>
    <string name="directions_to_here">Directions To Here</string>
    <string name="directions_from_here">Directions From Here</string>
    <string name="map_overlay_option">Map Overlay Option</string>
    <string name="my_trips">My Trips</string>
    <string name="taxis">Taxis</string>
    <string name="diversion_text">HopStop has accounted for scheduled service changes for this route.</string>
    <string name="hopstop_biz_intro">Get Transit &amp; Walking Directions</string>
    <string name="cannot_init_contact">Sorry, Could not launch contacts, please try again</string>
    <string name="no_address_for_contact">No address for this contact were found, please choose other contacts</string>
    <string name="no_address_for_contact_title">No address found</string>
    <string name="reverse_trip">Reverse Trip</string>
    <string name="new_search">New Search</string>
    <string name="save_trip_prior_reverse">Save Trip</string>
    <string name="save_trip_prior_reverse_text">Save trip prior to conducting a reverse trip</string>
    <string name="text_link_to_wap_string">To use Mobile Web: <a href="http://m.hopstop.com">http://m.hopstop.com</a></string>
    <string name="DISTANCE">Distance: %1$s miles</string>
    <string name="NO_MATCHES_FOUND">No matches found.</string>
    <string name="IDS_NONE">None</string>
    <string name="LANGUAGES">Languages</string>
    <string name="NEARBY">Nearby</string>
    <string name="DIRECTION_TO">Directions To</string>
    <string name="SERVICE_ADVISOR">Service Advisories</string>
    <string name="MTA_SERVICE_STATUS">MTA Service Status</string>
    <string name="SUBWAY_ADVISORIES">NYC Subway Advisories</string>
    <string name="RAIL_ADVISORIES">Rail Advisories</string>
    <string name="BUS_ADVISORIES">Bus Advisories</string>
    <string name="BRIDGES_AND_TUNNELS_ADVISORIES">Bridges &amp; Tunnels Advisories</string>
    <string name="MTA_SERVICE_STATUS_DETAILS">MTA Service Status as of %s</string>
    <string name="MTA_SERVICE_STATUS_DESCRIPTION_DETAILS">Not Available</string>
    <string name="NEED_CONNECTIVITY_TO_FIND_ADVISORIES">Need connectivity to find Advisories</string>
    <string name="TRANSIT_MAPS">Transit Maps</string>
    <string name="NYC_SUBWAY_MAP">NYC Subway Map</string>
    <string name="CHICAGO_METRA">Chicago Metra</string>
    <string name="SAN_FRANCISCO_BART">San Francisco BART</string>
    <string name="CHICAGO_CTA_LABEL">Chicago Rail (L)</string>
    <string name="WASHINGTON_WMATA_LABEL">Washington, DC WMATA</string>
    <string name="METRO_NORTH_RAILROAD">Metro North Railroad</string>
    <string name="LONG_ISLAND_RAILROAD">Long Island Railroad</string>
    <string name="wheel_chair_on">Wheelchair/Stroller Accessible</string>
    <string name="wheel_chair_off">Wheelchair/Stroller Accessible Off</string>
    <string name="WHEEL_CHAIR_WARNING">There were no wheelchair/stroller accessible routes found. The following transit route may not be accessible by a wheelchair or stroller. Please consider all transportation types.</string>
    <string name="NEW_YORK_MTA_PERMISSION">© Metropolitan Transportation Authority. Used with permission of Metropolitan Transportation Authority.</string>
    <string name="MAP_COURTESY_OF_METRA">Map courtesy of Metra.</string>
    <string name="MAP_COURTESY_OF_BART">Map courtesy of BART.</string>
    <string name="map_options_title">Map Options</string>
    <string name="city_spinner_title">Scroll up / down to select area</string>
    <string name="ADD_NEW_ADVISORIES_FEEDBACK">Would you like advisories in other cities? Please let us know!</string>
    <string name="ADD_NEW_TRANSITMAPS_FEEDBACK">Would you like transit maps in other cities? Please let us know!</string>
    <string name="SEND_FEEDBACK_BUTTON">Send Feedback</string>
    <string name="LONDON_UNDERGROUND">London Underground</string>
    <string name="NYC_BUS_MANHATTAN_NAME">NYC Manhattan Bus Map</string>
    <string name="toggle_on">ON</string>
    <string name="toggle_off">OFF</string>
    <string name="simplified_directions">Simplified Directions</string>
    <string name="express_buses">Express Buses</string>
    <string name="smart_route">Smart Route</string>
</resources>